--- a/about.html
+++ b/about.html
@@ -29,7 +29,7 @@
                 <li>
                     <a href="#">Dolls</a>
                     <ul class="inner-nav">
-                         <li>
+                            <li>
                             <a href="dolls/ballerina.html">Ballerina</a>
                         </li>
                         <li>
@@ -40,6 +40,9 @@
                         </li>
                         <li>
                             <a href="dolls/malvina2.html">Malvina2</a>
+                        </li>
+                        <li>
+                            <a href="dolls/marie.html">Marie</a>
                         </li>
                         <li>
                             <a href="dolls/ronnie.html">Ronnie</a>
@@ -75,10 +78,10 @@
                     <h2>&hearts; Adopt a doll</h2>
                     <div class="gal-row">
                         <div class="small-img-cont">
-                            <a class="product-link" href="amigurumi.html">
-                                <img src="images/smaller/winter_amis_smaller.jpg" alt="Winter Amis">
-                                <span>&hearts; Choose a Custom Made Ami</span></a>
-                            <p class="price-small">$35.00</p>
+                            <a class="product-link" href="dolls/marie.html">
+                                <img src="images/smaller/Marie_about.jpg" alt="Marie">
+                                <span>&hearts; Marie ~ Teacup Sailor And Bear Hugger</span></a>
+                            <p class="price-small">$45.00</p>
                         </div>
 
                         <div class="small-img-cont">
@@ -113,20 +116,20 @@
                          <div class="small-img-cont">
                             <a class="product-link" href="dolls/ronnie.html">
                                 <img src="images/smaller/ronnie4.jpg" alt="Ronnie">
-                                <span>&hearts; Ronnie</span></a>
+                                <span>&hearts; Ronnie ~ Winter Fairy Tale</span></a>
                             <p class="price-small">$50.00</p>
                         </div>
 
                     </div>
                     <div class="gal-row">
                         <div class="small-img-cont">
-                            <!--<img src="images/winter (3).png" alt="Winter Amis">-->
+                            <a class="product-link" href="amigurumi.html">
+                                <img src="images/smaller/winter_amis_smaller.jpg" alt="Winter Amis">
+                                <span>&hearts; Choose a Custom Made Ami</span></a>
+                            <p class="price-small">$35.00</p>
                         </div>
-                        <div class="gal-row">
-                            <div class="small-img-cont">
-                                <!--<img src="images/winter (3).png" alt="Winter Amis">-->
-                            </div>
-                        </div>
+
+
                     </div>
                 </div>
             </section>
