--- a/dolls/malvina.html
+++ b/dolls/malvina.html
@@ -42,6 +42,9 @@
                             <a href="malvina2.html">Malvina2</a>
                         </li>
                         <li>
+                            <a href="marie.html">Marie</a>
+                        </li>
+                        <li>
                             <a href="ronnie.html">Ronnie</a>
                         </li>
                     </ul>
