--- a/dolls/malvina2.html
+++ b/dolls/malvina2.html
@@ -29,7 +29,7 @@
                 <li class="current">
                     <a href="#">Dolls</a>
                     <ul class="inner-nav">
-                        <li>
+                       <li>
                             <a href="ballerina.html">Ballerina</a>
                         </li>
                         <li>
@@ -40,6 +40,9 @@
                         </li>
                         <li>
                             <a href="#">Malvina2</a>
+                        </li>
+                        <li>
+                            <a href="marie.html">Marie</a>
                         </li>
                         <li>
                             <a href="ronnie.html">Ronnie</a>
