--- a/dolls/ronnie.html
+++ b/dolls/ronnie.html
@@ -29,7 +29,7 @@
                 <li class="current">
                     <a href="#">Dolls</a>
                     <ul class="inner-nav">
-                         <li>
+                          <li>
                             <a href="ballerina.html">Ballerina</a>
                         </li>
                         <li>
@@ -40,6 +40,9 @@
                         </li>
                         <li>
                             <a href="malvina2.html">Malvina2</a>
+                        </li>
+                        <li>
+                            <a href="marie.html">Marie</a>
                         </li>
                         <li>
                             <a href="#">Ronnie</a>
@@ -75,7 +78,7 @@
                         <img src="../images/smaller/Ronnie6.jpg" alt="Ronnie"></div>
                     </div>
                 </div>
-                <div class="text"><h4>&hearts; Ronnie</h4>
+                <div class="text"><h4>&hearts; Ronnie ~ Winter Fairy Tale</h4>
                     <p class="dolls">Candy canes marzipan jelly-o cookie donut tiramisu carrot cake apple pie jelly beans. Apple pie lemon drops fruitcake topping. Powder croissant lemon drops danish dragée macaroon.
  Brownie cheesecake gummies gummi bears fruitcake powder. Caramels macaroon oat cake I love toffee jelly. Cheesecake I love carrot cake chocolate cake brownie cotton candy I love. Cotton candy dragée biscuit I love lemon drops croissant.</p>
                     <p class="price">$50.00</p>
