--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
                             <a href="dolls/malvina2.html">Malvina2</a>
                         </li>
                         <li>
+                            <a href="dolls/marie.html">Marie</a>
+                        </li>
+                        <li>
                             <a href="dolls/ronnie.html">Ronnie</a>
                         </li>
                     </ul>
