--- a/amigurumi.html
+++ b/amigurumi.html
@@ -29,7 +29,7 @@
                 <li>
                     <a href="#">Dolls</a>
                     <ul class="inner-nav">
-                         <li>
+                            <li>
                             <a href="dolls/ballerina.html">Ballerina</a>
                         </li>
                         <li>
@@ -40,6 +40,9 @@
                         </li>
                         <li>
                             <a href="dolls/malvina2.html">Malvina2</a>
+                        </li>
+                        <li>
+                            <a href="dolls/marie.html">Marie</a>
                         </li>
                         <li>
                             <a href="dolls/ronnie.html">Ronnie</a>
