New content added

--- a/about.html
+++ b/about.html
@@ -39,7 +39,7 @@
                             <a href="dolls/malvina.html">Malvina</a>
                         </li>
                         <li>
-                            <a href="dolls/malvina2.html">Malvina2</a>
+                            <a href="dolls/dilly.html">Dilly</a>
                         </li>
                         <li>
                             <a href="dolls/marie.html">Marie</a>
@@ -51,6 +51,12 @@
                 </li>
                 <li>
                     <a href="amigurumi.html">Amigurumi</a>
+                </li>
+                 <li>
+                    <a href="#">Creatures</a>
+                </li>
+                <li>
+                    <a href="#">Desserts</a>
                 </li>
                 <li>
                     <a href="contact.html">Contact</a>
@@ -80,36 +86,31 @@
                         <div class="small-img-cont">
                             <a class="product-link" href="dolls/marie.html">
                                 <img src="images/smaller/Marie_about.jpg" alt="Marie">
-                                <span>&hearts; Marie ~ Teacup Sailor And Bear Hugger</span></a>
+                                <span>&hearts; Marie ~ The Teacup Sailor Bunny Girl</span></a>
                             <p class="price-small">$45.00</p>
                         </div>
 
                         <div class="small-img-cont">
-                            <a class="product-link" href="dolls/malvina2.html">
-                                <img src="images/smaller/malvina2_bear_smaller.jpg" alt="Malvina2">
-                                <span>&hearts; Malvina Pouty</span></a>
+                            <a class="product-link" href="dolls/cupcakes.html">
+                                <img src="images/smaller/malvina2_bear_smaller.jpg" alt="Cupcake">
+                                <span>&hearts; Cupcakes ~ Autumn Forest Elf</span></a>
                             <p class="price-small">$50.00</p>
                         </div>
                         <div class="small-img-cont">
                             <a class="product-link" href="dolls/malvina.html">
                                 <img src="images/smaller/malvina3_smaller.jpg" alt="Malvina">
-                                <span>&hearts; Malvina the Blue-Haired Fairy</span></a>
+                                <span>&hearts; Malvina ~ The Blue-Haired Fairy</span></a>
                             <p class="price-small">$45.00</p>
                         </div>
                     </div>
 
                     <div class="gal-row">
-                        <div class="small-img-cont">
-                            <a class="product-link" href="dolls/cupcakes.html">
-                                <img src="images/smaller/cupcake.jpg" alt="Winter Cupcake">
-                                <span>&hearts; Winter Cupcake</span></a>
-                            <p class="price-small">$35.00</p>
-                        </div>
+
 
                         <div class="small-img-cont">
                             <a class="product-link" href="dolls/ballerina.html">
                                 <img src="images/smaller/ballerina.jpg" alt="Ballerina">
-                                <span>&hearts; Ballerina ~ you poor sad thing</span></a>
+                                <span>&hearts; Ballerina ~ Sad Spring Melody</span></a>
                             <p class="price-small">$45.00</p>
                         </div>
 
@@ -120,8 +121,6 @@
                             <p class="price-small">$50.00</p>
                         </div>
 
-                    </div>
-                    <div class="gal-row">
                         <div class="small-img-cont">
                             <a class="product-link" href="amigurumi.html">
                                 <img src="images/smaller/winter_amis_smaller.jpg" alt="Winter Amis">
@@ -129,8 +128,8 @@
                             <p class="price-small">$35.00</p>
                         </div>
 
-
                     </div>
+
                 </div>
             </section>
         </section>
