--- a/contact.html
+++ b/contact.html
@@ -39,7 +39,7 @@
                             <a href="dolls/malvina.html">Malvina</a>
                         </li>
                         <li>
-                            <a href="dolls/malvina2.html">Malvina2</a>
+                            <a href="dolls/dilly.html">Dilly</a>
                         </li>
                         <li>
                             <a href="dolls/marie.html">Marie</a>
@@ -52,6 +52,12 @@
                 <li>
                     <a href="amigurumi.html">Amigurumi</a>
                 </li>
+                 <li>
+                    <a href="#">Creatures</a>
+                </li>
+                <li>
+                    <a href="#">Desserts</a>
+                </li>
                 <li class="current">
                     <a href="#">Contact</a>
                 </li>
@@ -62,7 +68,8 @@
         </nav>
         <section class="hero">
             <header>
-                <h3>Contact Us</h3>
+                <img src="images/smaller/cupcake.jpg">
+                <h3 class="contact">Contact Me</h3>
             </header>
 
 				<form name="contact" method="post" action="#">
