--- a/dolls/cupcakes.html
+++ b/dolls/cupcakes.html
@@ -39,7 +39,7 @@
                             <a href="malvina.html">Malvina</a>
                         </li>
                         <li>
-                            <a href="malvina2.html">Malvina2</a>
+                            <a href="dilly.html">Dilly</a>
                         </li>
                         <li>
                             <a href="marie.html">Marie</a>
@@ -51,6 +51,12 @@
                 </li>
                 <li>
                     <a href="../amigurumi.html">Amigurumi</a>
+                </li>
+                 <li>
+                    <a href="#">Creatures</a>
+                </li>
+                <li>
+                    <a href="#">Desserts</a>
                 </li>
                 <li>
                     <a href="../contact.html">Contact</a>
@@ -66,22 +72,23 @@
             </header>
             <section class="page container">
                 <div class="gallery">
-                    <img src="../images/larger/cupcake.jpg" alt="Cupcake">
-                    <!--<div class="small-gal">
+                    <img id="gallery-current" src="../images/smaller/cupcake_gallery%20(2).jpg" alt="Cupcake">
+                    <div class="small-gal">
                         <div class="small-img-cont">
-                        <img src="../images/winter (1).png" alt="Winter Amis"></div>
+                        <img src="../images/smaller/cupcake_gallery%20(2).jpg" alt="Cupcake"></div>
                           <div class="small-img-cont">
-                        <img src="../images/winter (6).png" alt="Winter Amis"></div>
+                        <img src="../images/smaller/cupcake_gallery%20(1).jpg" alt="Cupcake"></div>
                           <div class="small-img-cont">
-                        <img src="../images/winter (5).png" alt="Winter Amis"></div>
+                        <img src="../images/smaller/cupcake_gallery%20(4).jpg" alt="Cupcake"></div>
                           <div class="small-img-cont">
-                        <img src="../images/winter (3).png" alt="Winter Amis"></div>
-                    </div>-->
+                        <img src="../images/smaller/cupcake_gallery%20(3).jpg" alt="Cupcake"></div>
+                    </div>
                 </div>
-                <div class="text"><h4>&hearts; Winter Cupcake</h4>
+                <div class="text"><h4>&hearts; Autumn forest elf</h4>
+                    <h5>I &hearts; teacups and bear hugging</h5>
                     <p class="dolls">Candy canes marzipan jelly-o cookie donut tiramisu carrot cake apple pie jelly beans. Apple pie lemon drops fruitcake topping. Powder croissant lemon drops danish dragée macaroon.
  Brownie cheesecake gummies gummi bears fruitcake powder. Caramels macaroon oat cake I love toffee jelly. Cheesecake I love carrot cake chocolate cake brownie cotton candy I love. Cotton candy dragée biscuit I love lemon drops croissant.</p>
-                    <p class="price">$35.00</p>
+                    <p class="price">$50.00</p>
                     <a href="#">no tax, free shipping</a>
                     <p><i class="fa fa-clock-o" aria-hidden="true"></i> <em>Ships within 1-3 days</em></p>
                     <button class="buy-btn">Add to Cart</button>
