--- a/dolls/malvina.html
+++ b/dolls/malvina.html
@@ -39,7 +39,7 @@
                             <a href="#">Malvina</a>
                         </li>
                         <li>
-                            <a href="malvina2.html">Malvina2</a>
+                            <a href="dilly.html">Dilly</a>
                         </li>
                         <li>
                             <a href="marie.html">Marie</a>
@@ -51,6 +51,12 @@
                 </li>
                 <li>
                     <a href="../amigurumi.html">Amigurumi</a>
+                </li>
+                 <li>
+                    <a href="#">Creatures</a>
+                </li>
+                <li>
+                    <a href="#">Desserts</a>
                 </li>
                 <li>
                     <a href="../contact.html">Contact</a>
@@ -78,7 +84,7 @@
                         <img src="../images/winter (3).png" alt="Winter Amis"></div>
                     </div>-->
                 </div>
-                <div class="text"><h4>&hearts; Malvina the Blue-Haired Fairy</h4>
+                <div class="text"><h4>&hearts; Malvina ~ the Blue-Haired Fairy</h4>
                     <p class="dolls">Candy canes marzipan jelly-o cookie donut tiramisu carrot cake apple pie jelly beans. Apple pie lemon drops fruitcake topping. Powder croissant lemon drops danish dragée macaroon.
  Brownie cheesecake gummies gummi bears fruitcake powder. Caramels macaroon oat cake I love toffee jelly. Cheesecake I love carrot cake chocolate cake brownie cotton candy I love. Cotton candy dragée biscuit I love lemon drops croissant.</p>
                     <p class="price">$45.00</p>
