--- a/dolls/ronnie.html
+++ b/dolls/ronnie.html
@@ -39,7 +39,7 @@
                             <a href="malvina.html">Malvina</a>
                         </li>
                         <li>
-                            <a href="malvina2.html">Malvina2</a>
+                            <a href="dilly.html">Dilly</a>
                         </li>
                         <li>
                             <a href="marie.html">Marie</a>
@@ -51,6 +51,12 @@
                 </li>
                 <li>
                     <a href="../amigurumi.html">Amigurumi</a>
+                </li>
+                 <li>
+                    <a href="#">Creatures</a>
+                </li>
+                <li>
+                    <a href="#">Desserts</a>
                 </li>
                 <li>
                     <a href="../contact.html">Contact</a>
@@ -66,16 +72,17 @@
             </header>
             <section class="page container">
                 <div class="gallery">
-                    <img id="gallery-current" src="../images/smaller/Ronnie.jpg" alt="Ronnie">
+                    <img id="gallery-current" src="../images/smaller/Ronnie2.jpg" alt="Ronnie">
                     <div class="small-gal">
-                        <div class="small-img-cont">
-                        <img src="../images/smaller/Ronnie.jpg" alt="Ronnie"></div>
-                          <div class="small-img-cont">
-                        <img src="../images/smaller/Ronnie1.jpg" alt="Ronnie"></div>
                           <div class="small-img-cont">
                         <img src="../images/smaller/Ronnie2.jpg" alt="Ronnie"></div>
                           <div class="small-img-cont">
                         <img src="../images/smaller/Ronnie6.jpg" alt="Ronnie"></div>
+
+                             <div class="small-img-cont">
+                        <img src="../images/smaller/Ronnie.jpg" alt="Ronnie"></div>
+                         <div class="small-img-cont">
+                        <img src="../images/smaller/Ronnie1.jpg" alt="Ronnie"></div>
                     </div>
                 </div>
                 <div class="text"><h4>&hearts; Ronnie ~ Winter Fairy Tale</h4>
