--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                             <a href="dolls/malvina.html">Malvina</a>
                         </li>
                         <li>
-                            <a href="dolls/malvina2.html">Malvina2</a>
+                            <a href="dolls/dilly.html">Dilly</a>
                         </li>
                         <li>
                             <a href="dolls/marie.html">Marie</a>
@@ -50,6 +50,12 @@
                 </li>
                 <li>
                     <a href="amigurumi.html">Amigurumi</a>
+                </li>
+                <li>
+                    <a href="#">Creatures</a>
+                </li>
+                <li>
+                    <a href="#">Desserts</a>
                 </li>
                 <li>
                     <a href="contact.html">Contact</a>
