--- a/amigurumi.html
+++ b/amigurumi.html
@@ -39,7 +39,7 @@
                             <a href="dolls/malvina.html">Malvina</a>
                         </li>
                         <li>
-                            <a href="dolls/malvina2.html">Malvina2</a>
+                            <a href="dolls/dilly.html">Dilly</a>
                         </li>
                         <li>
                             <a href="dolls/marie.html">Marie</a>
@@ -51,6 +51,12 @@
                 </li>
                 <li class="current">
                     <a href="#">Amigurumi</a>
+                </li>
+                 <li>
+                    <a href="#">Creatures</a>
+                </li>
+                <li>
+                    <a href="#">Desserts</a>
                 </li>
                 <li>
                     <a href="contact.html">Contact</a>
