--- a/dolls/dilly.html
+++ b/dolls/dilly.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Marie - Kind Monster Cafe</title>
+    <title>Malvina2 - Kind Monster Cafe</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/4.2.0/normalize.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700&subset=cyrillic" rel="stylesheet">
@@ -29,7 +29,7 @@
                 <li class="current">
                     <a href="#">Dolls</a>
                     <ul class="inner-nav">
-                         <li>
+                       <li>
                             <a href="ballerina.html">Ballerina</a>
                         </li>
                         <li>
@@ -39,10 +39,10 @@
                             <a href="malvina.html">Malvina</a>
                         </li>
                         <li>
-                            <a href="dilly.html">Dilly</a>
+                            <a href="#">Dilly</a>
                         </li>
                         <li>
-                            <a href="#">Marie</a>
+                            <a href="marie.html">Marie</a>
                         </li>
                         <li>
                             <a href="ronnie.html">Ronnie</a>
@@ -71,54 +71,55 @@
 
             </header>
             <section class="page container">
-                <div class="gallery">
-                    <img id="gallery-current" src="../images/smaller/Marie_gallery1.jpg" alt="Marie">
+               <div class="gallery">
+                    <img id="gallery-current" src="../images/smaller/Dilly_gallery1.jpg" alt="Dilly">
                     <div class="small-gal">
                         <div class="small-img-cont">
-                        <img src="../images/smaller/Marie_gallery1.jpg" alt="Marie"></div>
+                        <img src="../images/smaller/Dilly_gallery1.jpg" alt="Dilly"></div>
                           <div class="small-img-cont">
-                        <img src="../images/smaller/Marie_gallery2.jpg" alt="Marie"></div>
+                        <img src="../images/smaller/Dilly_gallery2.jpg" alt="Dilly"></div>
                           <div class="small-img-cont">
-                        <img src="../images/smaller/Marie_gallery3.jpg" alt="Marie"></div>
-                          <div class="small-img-cont">
-                        <img src="../images/smaller/Marie_gallery4.jpg" alt="Marie"></div>
+                        <img src="../images/smaller/Dilly_gallery3.jpg" alt="Dilly"></div>
+                          <!--<div class="small-img-cont">
+                        <img src="../images/smaller/Dilly_gallery4.jpg" alt="Dilly"></div>-->
                     </div>
-                </div>
-                <div class="text"><h4>&hearts; The teacup sailor bunny girl</h4>
+                   </div>
+                <div class="text"><h4>I &hearts; cotton candy</h4>
                     <p class="dolls">Candy canes marzipan jelly-o cookie donut tiramisu carrot cake apple pie jelly beans. Apple pie lemon drops fruitcake topping. Powder croissant lemon drops danish dragée macaroon.
  Brownie cheesecake gummies gummi bears fruitcake powder. Caramels macaroon oat cake I love toffee jelly. Cheesecake I love carrot cake chocolate cake brownie cotton candy I love. Cotton candy dragée biscuit I love lemon drops croissant.</p>
-                    <p class="price">$45.00</p>
+                    <p class="price">$35.00</p>
                     <a href="#">no tax, free shipping</a>
                     <p><i class="fa fa-clock-o" aria-hidden="true"></i> <em>Ships within 1-3 days</em></p>
                     <button class="buy-btn">Add to Cart</button>
                 </div>
             </section>
+
         </section>
         <footer>
             <div class="container">
                       <section class="share-icons container">
                     <a class="share-facebook"
-                       href="http://www.facebook.com/sharer.php?u=http%3A%2F%2Fkindmonster.cf%2Fmalvina%2F&amp;t=Malvina"
+                       href="http://www.facebook.com/sharer.php?u=http%3A%2F%2Fkindmonster.cf%2Fmalvina2%2F&amp;t=Malvina2"
                        title="Facebook" target="_blank">
                         <i class="fa fa-facebook-square" aria-hidden="true"></i>
                     </a>
                     <a class="share-twitter"
-                       href="http://twitter.com/share?text=Malvina&amp;url=http%3A%2F%2Fkindmonster.cf%2Fmalvina%2F" title="Twitter"
+                       href="http://twitter.com/share?text=Malvina2&amp;url=http%3A%2F%2Fkindmonster.cf%2Fmalvina2%2F" title="Twitter"
                        target="_blank">
                         <i class="fa fa-twitter-square" aria-hidden="true"></i>
                     </a>
-                    <a class="share-google" href="https://plus.google.com/share?url=http%3A%2F%2Fkindmonster.cf%2Fmalvina%2F"
+                    <a class="share-google" href="https://plus.google.com/share?url=http%3A%2F%2Fkindmonster.cf%2Fmalvina2%2F"
                        title="Google+"
                        target="_blank">
                         <i class="fa fa-google-plus-square" aria-hidden="true"></i>
                     </a>
                     <a class="share-linkedin"
-                       href="http://www.linkedin.com/shareArticle?mini=true&amp;url=http%3A%2F%2Fkindmonster.cf%2Fmalvina%2F&amp;title=Malvina"
+                       href="http://www.linkedin.com/shareArticle?mini=true&amp;url=http%3A%2F%2Fkindmonster.cf%2Fmalvina2%2F&amp;title=Malvina2"
                        title="LinkedIn" target="_blank">
                         <i class="fa fa-linkedin-square" aria-hidden="true"></i>
                     </a>
                     <!--<i class="fa fa-pinterest-square" aria-hidden="true" title="Pinterest"></i>-->
-                    <a class="share-email" href="mailto:?subject=Malvina&amp;body=http%3A%2F%2Fkindmonster.cf%2Fmalvina%2F"
+                    <a class="share-email" href="mailto:?subject=Malvina2&amp;body=http%3A%2F%2Fkindmonster.cf%2Fmalvina2%2F"
                        title="Email" target="">
                         <i class="fa fa-envelope-square" aria-hidden="true"></i>
                     </a>
