New content added

--- a/about.html
+++ b/about.html
@@ -86,14 +86,14 @@
                         <div class="small-img-cont">
                             <a class="product-link" href="dolls/marie.html">
                                 <img src="images/smaller/Marie_about.jpg" alt="Marie">
-                                <span>&hearts; Marie ~ The Teacup Sailor Bunny Girl</span></a>
+                                <span>&hearts; The Teacup Sailor Bunny Girl</span></a>
                             <p class="price-small">$45.00</p>
                         </div>
 
                         <div class="small-img-cont">
                             <a class="product-link" href="dolls/cupcakes.html">
                                 <img src="images/smaller/malvina2_bear_smaller.jpg" alt="Cupcake">
-                                <span>&hearts; Cupcakes ~ Autumn Forest Elf</span></a>
+                                <span>&hearts; The Autumn Forest Elf</span></a>
                             <p class="price-small">$50.00</p>
                         </div>
                         <div class="small-img-cont">
