--- a/dolls/cupcakes.html
+++ b/dolls/cupcakes.html
@@ -84,7 +84,7 @@
                         <img src="../images/smaller/cupcake_gallery%20(3).jpg" alt="Cupcake"></div>
                     </div>
                 </div>
-                <div class="text"><h4>&hearts; Autumn forest elf</h4>
+                <div class="text"><h4>&hearts; The autumn forest elf</h4>
                     <h5>I &hearts; teacups and bear hugging</h5>
                     <p class="dolls">Candy canes marzipan jelly-o cookie donut tiramisu carrot cake apple pie jelly beans. Apple pie lemon drops fruitcake topping. Powder croissant lemon drops danish dragée macaroon.
  Brownie cheesecake gummies gummi bears fruitcake powder. Caramels macaroon oat cake I love toffee jelly. Cheesecake I love carrot cake chocolate cake brownie cotton candy I love. Cotton candy dragée biscuit I love lemon drops croissant.</p>
