--- a/dolls/dilly.html
+++ b/dolls/dilly.html
@@ -80,13 +80,14 @@
                         <img src="../images/smaller/Dilly_gallery2.jpg" alt="Dilly"></div>
                           <div class="small-img-cont">
                         <img src="../images/smaller/Dilly_gallery3.jpg" alt="Dilly"></div>
-                          <!--<div class="small-img-cont">
-                        <img src="../images/smaller/Dilly_gallery4.jpg" alt="Dilly"></div>-->
+                          <div class="small-img-cont">
+                        <img src="../images/smaller/Dilly_gallery4.jpg" alt="Dilly"></div>
                     </div>
                    </div>
-                <div class="text"><h4>I &hearts; cotton candy</h4>
-                    <p class="dolls">Candy canes marzipan jelly-o cookie donut tiramisu carrot cake apple pie jelly beans. Apple pie lemon drops fruitcake topping. Powder croissant lemon drops danish dragée macaroon.
- Brownie cheesecake gummies gummi bears fruitcake powder. Caramels macaroon oat cake I love toffee jelly. Cheesecake I love carrot cake chocolate cake brownie cotton candy I love. Cotton candy dragée biscuit I love lemon drops croissant.</p>
+                <div class="text"><h4>&hearts; Dilly</h4>
+                    <h5>I &hearts; cotton candy</h5>
+                    <p class="dolls">Huggable and soft, Dilly was inspired by the old-time rag dolls and is very suitable for young girls, especially for sleeping with at night. With this long hair you can make all kinds of hairstyles.</p>
+ <p class="dolls">With or withour eyebrows, with a painted or a stitched nose, smiling or serious - you choose her facial features.</p>
                     <p class="price">$35.00</p>
                     <a href="#">no tax, free shipping</a>
                     <p><i class="fa fa-clock-o" aria-hidden="true"></i> <em>Ships within 1-3 days</em></p>
