--- a/dolls/ronnie.html
+++ b/dolls/ronnie.html
@@ -86,6 +86,7 @@
                     </div>
                 </div>
                 <div class="text"><h4>&hearts; Ronnie ~ Winter Fairy Tale</h4>
+                    <h5> I &hearts; showdrops and gingerbread</h5>
                     <p class="dolls">Candy canes marzipan jelly-o cookie donut tiramisu carrot cake apple pie jelly beans. Apple pie lemon drops fruitcake topping. Powder croissant lemon drops danish dragée macaroon.
  Brownie cheesecake gummies gummi bears fruitcake powder. Caramels macaroon oat cake I love toffee jelly. Cheesecake I love carrot cake chocolate cake brownie cotton candy I love. Cotton candy dragée biscuit I love lemon drops croissant.</p>
                     <p class="price">$50.00</p>
