--- a/dolls/malvina.html
+++ b/dolls/malvina.html
@@ -35,7 +35,7 @@
                         <li>
                             <a href="cupcakes.html">Cupcakes</a>
                         </li>
-                         <li>
+                        <li>
                             <a href="#">Malvina</a>
                         </li>
                         <li>
@@ -52,7 +52,7 @@
                 <li>
                     <a href="../amigurumi.html">Amigurumi</a>
                 </li>
-                 <li>
+                <li>
                     <a href="#">Creatures</a>
                 </li>
                 <li>
@@ -72,21 +72,26 @@
             </header>
             <section class="page container">
                 <div class="gallery">
-                    <img src="../images/larger/malvina3.png" alt="Malvina">
-                    <!--<div class="small-gal">
+                    <img id="gallery-current" src="../images/smaller/malvina_gallery1.jpg" alt="Malvina">
+                    <div class="small-gal">
                         <div class="small-img-cont">
-                        <img src="../images/winter (1).png" alt="Winter Amis"></div>
-                          <div class="small-img-cont">
-                        <img src="../images/winter (6).png" alt="Winter Amis"></div>
-                          <div class="small-img-cont">
-                        <img src="../images/winter (5).png" alt="Winter Amis"></div>
-                          <div class="small-img-cont">
-                        <img src="../images/winter (3).png" alt="Winter Amis"></div>
-                    </div>-->
+                            <img src="../images/smaller/malvina_gallery1.jpg" alt="Malvina"></div>
+                        <div class="small-img-cont">
+                            <img src="../images/smaller/malvina_gallery2.jpg" alt="Malvina"></div>
+                        <div class="small-img-cont">
+                            <img src="../images/smaller/malvina_gallery3.jpg" alt="Malvina"></div>
+                        <div class="small-img-cont">
+                            <img src="../images/smaller/malvina_gallery4.jpg" alt="Malvina"></div>
+                    </div>
                 </div>
                 <div class="text"><h4>&hearts; Malvina ~ the Blue-Haired Fairy</h4>
-                    <p class="dolls">Candy canes marzipan jelly-o cookie donut tiramisu carrot cake apple pie jelly beans. Apple pie lemon drops fruitcake topping. Powder croissant lemon drops danish dragée macaroon.
- Brownie cheesecake gummies gummi bears fruitcake powder. Caramels macaroon oat cake I love toffee jelly. Cheesecake I love carrot cake chocolate cake brownie cotton candy I love. Cotton candy dragée biscuit I love lemon drops croissant.</p>
+                    <h5>I &hearts; singing and cheescake</h5>
+                    <p class="dolls">Candy canes marzipan jelly-o cookie donut tiramisu carrot cake apple pie jelly
+                        beans. Apple pie lemon drops fruitcake topping. Powder croissant lemon drops danish dragée
+                        macaroon.
+                        Brownie cheesecake gummies gummi bears fruitcake powder. Caramels macaroon oat cake I love
+                        toffee jelly. Cheesecake I love carrot cake chocolate cake brownie cotton candy I love. Cotton
+                        candy dragée biscuit I love lemon drops croissant.</p>
                     <p class="price">$45.00</p>
                     <a href="#">no tax, free shipping</a>
                     <p><i class="fa fa-clock-o" aria-hidden="true"></i> <em>Ships within 1-3 days</em></p>
@@ -96,18 +101,20 @@
         </section>
         <footer>
             <div class="container">
-                      <section class="share-icons container">
+                <section class="share-icons container">
                     <a class="share-facebook"
                        href="http://www.facebook.com/sharer.php?u=http%3A%2F%2Fkindmonster.cf%2Fmalvina%2F&amp;t=Malvina"
                        title="Facebook" target="_blank">
                         <i class="fa fa-facebook-square" aria-hidden="true"></i>
                     </a>
                     <a class="share-twitter"
-                       href="http://twitter.com/share?text=Malvina&amp;url=http%3A%2F%2Fkindmonster.cf%2Fmalvina%2F" title="Twitter"
+                       href="http://twitter.com/share?text=Malvina&amp;url=http%3A%2F%2Fkindmonster.cf%2Fmalvina%2F"
+                       title="Twitter"
                        target="_blank">
                         <i class="fa fa-twitter-square" aria-hidden="true"></i>
                     </a>
-                    <a class="share-google" href="https://plus.google.com/share?url=http%3A%2F%2Fkindmonster.cf%2Fmalvina%2F"
+                    <a class="share-google"
+                       href="https://plus.google.com/share?url=http%3A%2F%2Fkindmonster.cf%2Fmalvina%2F"
                        title="Google+"
                        target="_blank">
                         <i class="fa fa-google-plus-square" aria-hidden="true"></i>
@@ -118,7 +125,8 @@
                         <i class="fa fa-linkedin-square" aria-hidden="true"></i>
                     </a>
                     <!--<i class="fa fa-pinterest-square" aria-hidden="true" title="Pinterest"></i>-->
-                    <a class="share-email" href="mailto:?subject=Malvina&amp;body=http%3A%2F%2Fkindmonster.cf%2Fmalvina%2F"
+                    <a class="share-email"
+                       href="mailto:?subject=Malvina&amp;body=http%3A%2F%2Fkindmonster.cf%2Fmalvina%2F"
                        title="Email" target="">
                         <i class="fa fa-envelope-square" aria-hidden="true"></i>
                     </a>
