Implemented responsive off-canvas nav menu

--- a/dolls/dilly.html
+++ b/dolls/dilly.html
@@ -21,6 +21,7 @@
     </header>
     <div class="container"></div>
     <main>
+        <i id="menu-icon" class="fa fa-bars" aria-hidden="true"></i>
         <nav class="main-nav">
             <ul>
                 <li>
@@ -28,6 +29,8 @@
                 </li>
                 <li class="current">
                     <a href="#">Dolls</a>
+                    <i id="minus-icon" class="fa fa-minus" aria-hidden="true"></i>
+                    <i id="plus-icon" class="fa fa-plus" aria-hidden="true"></i>
                     <ul class="inner-nav">
                        <li>
                             <a href="ballerina.html">Ballerina</a>
@@ -38,7 +41,7 @@
                          <li>
                             <a href="malvina.html">Malvina</a>
                         </li>
-                        <li>
+                        <li class="current">
                             <a href="#">Dilly</a>
                         </li>
                         <li>
