--- a/about.html
+++ b/about.html
@@ -21,6 +21,7 @@
     </header>
     <div class="container"></div>
     <main>
+        <i id="menu-icon" class="fa fa-bars" aria-hidden="true"></i>
         <nav class="main-nav">
             <ul>
                 <li>
@@ -28,6 +29,8 @@
                 </li>
                 <li>
                     <a href="#">Dolls</a>
+                    <i id="minus-icon" class="fa fa-minus" aria-hidden="true"></i>
+                    <i id="plus-icon" class="fa fa-plus" aria-hidden="true"></i>
                     <ul class="inner-nav">
                             <li>
                             <a href="dolls/ballerina.html">Ballerina</a>
