--- a/dolls/cupcakes.html
+++ b/dolls/cupcakes.html
@@ -21,6 +21,7 @@
     </header>
     <div class="container"></div>
     <main>
+        <i id="menu-icon" class="fa fa-bars" aria-hidden="true"></i>
         <nav class="main-nav">
             <ul>
                 <li>
@@ -28,11 +29,13 @@
                 </li>
                 <li class="current">
                     <a href="#">Dolls</a>
+                    <i id="minus-icon" class="fa fa-minus" aria-hidden="true"></i>
+                    <i id="plus-icon" class="fa fa-plus" aria-hidden="true"></i>
                     <ul class="inner-nav">
                        <li>
                             <a href="ballerina.html">Ballerina</a>
                         </li>
-                        <li>
+                        <li class="current">
                             <a href="#">Cupcakes</a>
                         </li>
                          <li>
