--- a/index.html
+++ b/index.html
@@ -20,6 +20,15 @@
         <h1>Kind Monster Café</h1>
     </header>
     <main>
+        <i id="menu-icon" class="fa fa-bars" aria-hidden="true"></i>
+        <div class="shopping-cart">
+            <div id="shopping-cart">
+                <i class="fa fa-cart-plus" aria-hidden="true"></i>
+            </div>
+            <div id="cart-message">
+                <p>Your shopping cart is empty.</p>
+            </div>
+        </div>
         <nav class="main-nav">
             <ul>
                 <li class="current">
@@ -27,14 +36,16 @@
                 </li>
                 <li>
                     <a href="#">Dolls</a>
+                    <i id="minus-icon" class="fa fa-minus" aria-hidden="true"></i>
+                    <i id="plus-icon" class="fa fa-plus" aria-hidden="true"></i>
                     <ul class="inner-nav">
-                         <li>
+                        <li>
                             <a href="dolls/ballerina.html">Ballerina</a>
                         </li>
                         <li>
                             <a href="dolls/cupcakes.html">Cupcakes</a>
                         </li>
-                         <li>
+                        <li>
                             <a href="dolls/malvina.html">Malvina</a>
                         </li>
                         <li>
@@ -120,14 +131,6 @@
     <footer>
         <small>&copy; Natalia Malkovska <span class="date">2015</span></small>
     </footer>
-    <div class="shopping-cart">
-        <div id="shopping-cart">
-            <i class="fa fa-cart-plus" aria-hidden="true"></i>
-        </div>
-        <div id="cart-message">
-            <p>Your shopping cart is empty.</p>
-        </div>
-    </div>
 </div>
 
 <script src="scripts/main.js"></script>
