--- a/about.html
+++ b/about.html
@@ -107,20 +107,20 @@
                     <div class="gal-row">
                         <div class="small-img-cont">
                             <a class="product-link" href="dolls/bunny.html">
-                                <img src="images/about/Bunny5.png" alt="Bunny">
+                                <img src="images/about/Bunny5.jpg" alt="Bunny">
                                 <span>&hearts; The Teacup Sailor Bunny Girl</span></a>
                             <p class="price-small">$45.00</p>
                         </div>
 
                         <div class="small-img-cont">
                             <a class="product-link" href="dolls/cherry.html">
-                                <img src="images/about/Cherry5.png" alt="Cherry">
+                                <img src="images/about/Cherry5.jpg" alt="Cherry">
                                 <span>&hearts; Cherry ~ The fruit orchard elf</span></a>
                             <p class="price-small">$50.00</p>
                         </div>
                         <div class="small-img-cont">
                             <a class="product-link" href="dolls/malvina.html">
-                                <img src="images/about/Malvina5.png" alt="Malvina">
+                                <img src="images/about/Malvina5.jpg" alt="Malvina">
                                 <span>&hearts; Malvina ~ The Blue-Haired Fairy</span></a>
                             <p class="price-small">$45.00</p>
                         </div>
@@ -136,14 +136,14 @@
 
                          <div class="small-img-cont">
                             <a class="product-link" href="dolls/ronnie.html">
-                                <img src="images/about/Ronnie5.png" alt="Ronnie">
+                                <img src="images/about/Ronnie5.jpg" alt="Ronnie">
                                 <span>&hearts; Ronnie ~ Winter Fairy Tale</span></a>
                             <p class="price-small">$50.00</p>
                         </div>
 
                         <div class="small-img-cont">
                             <a class="product-link" href="amigurumi.html">
-                                <img src="images/about/Winter%20Dolls5.png" alt="Winter Amis">
+                                <img src="images/about/WinterDolls5.jpg" alt="Winter Amis">
                                 <span>&hearts; Choose a Custom Made Ami</span></a>
                             <p class="price-small">$35.00</p>
                         </div>
@@ -160,20 +160,20 @@
                             <a class="product-link" href="tiny/snail.html">
                                 <img src="images/about/snail-about.png" alt="Tiny snail">
                                 <span>&hearts; Tiny Ami Snail</span></a>
-                            <p class="price-small">$20.00</p>
+                            <p class="price-small">$15.00</p>
                         </div>
 
                         <div class="small-img-cont">
                             <a class="product-link" href="tiny/sheep.html">
                                 <img src="images/about/sheep-about.png" alt="Tiny sheep">
                                 <span>&hearts; Tiny Ami Sheep</span></a>
-                            <p class="price-small">$25.00</p>
+                            <p class="price-small">$20.00</p>
                         </div>
                         <div class="small-img-cont">
                             <a class="product-link" href="tiny/fox.html">
                                 <img src="images/about/fox-about.png" alt="Tiny fox">
                                 <span>&hearts; Tiny Ami Fox</span></a>
-                            <p class="price-small">$25.00</p>
+                            <p class="price-small">$20.00</p>
                         </div>
                     </div>
 
@@ -182,21 +182,21 @@
                             <a class="product-link" href="tiny/dog.html">
                                 <img src="images/about/dog-about.png" alt="Tiny dog">
                                 <span>&hearts; Tiny Ami Dog</span></a>
-                            <p class="price-small">$25.00</p>
+                            <p class="price-small">$20.00</p>
                         </div>
 
                         <div class="small-img-cont">
                             <a class="product-link" href="tiny/rabbit.html">
                                 <img src="images/about/bunny-about.jpg" alt="Tiny rabbit">
                                 <span>&hearts; Tiny Ami Rabbit</span></a>
-                            <p class="price-small">$25.00</p>
+                            <p class="price-small">$20.00</p>
                         </div>
 
                         <div class="small-img-cont">
                             <a class="product-link" href="#">
                                 <img src="images/about/panda.jpg" alt="Tiny panda">
                                 <span>&hearts; Tiny Panda Ball</span></a>
-                            <p class="price-small">$20.00</p>
+                            <p class="price-small">$15.00</p>
                         </div>
 
                     </div>
