--- a/contact.html
+++ b/contact.html
@@ -109,7 +109,7 @@
                         <textarea name="comments" placeholder="Message me here"></textarea>
                     </label>
                 </fieldset>
-                <input class="buy-btn" type="submit" name="submit" value="send">
+                <input class="buy-btn" type="submit" name="submit" value="Send">
             </form>
 
         </section>
