--- a/dolls/ronnie.html
+++ b/dolls/ronnie.html
@@ -106,7 +106,7 @@
                             <img src="../images/gallery/Ronnie3.png" alt="Ronnie">
                         </div>
                         <div class="small-img-cont">
-                            <img src="../images/gallery/Ronnie1.png" alt="Ronnie">
+                            <img src="../images/gallery/Ronnie1.jpg" alt="Ronnie">
                         </div>
                     </div>
                 </div>
