--- a/dolls/ronnie.html
+++ b/dolls/ronnie.html
@@ -94,16 +94,16 @@
             </header>
             <section class="page container">
                 <div class="gallery">
-                    <img id="gallery-current" src="../images/gallery/Ronnie2.png" alt="Ronnie">
+                    <img id="gallery-current" src="../images/gallery/Ronnie2.jpg" alt="Ronnie">
                     <div class="small-gal">
                         <div class="small-img-cont">
-                            <img src="../images/gallery/Ronnie2.png" alt="Ronnie">
+                            <img src="../images/gallery/Ronnie2.jpg" alt="Ronnie">
                         </div>
                         <div class="small-img-cont">
-                            <img src="../images/gallery/Ronnie4.png" alt="Ronnie">
+                            <img src="../images/gallery/Ronnie4.jpg" alt="Ronnie">
                         </div>
                         <div class="small-img-cont">
-                            <img src="../images/gallery/Ronnie3.png" alt="Ronnie">
+                            <img src="../images/gallery/Ronnie3.jpg" alt="Ronnie">
                         </div>
                         <div class="small-img-cont">
                             <img src="../images/gallery/Ronnie1.jpg" alt="Ronnie">
