--- a/dolls/yana.html
+++ b/dolls/yana.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Malvina2 - Kind Monster Cafe</title>
+    <title>Yana - Kind Monster Cafe</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/4.2.0/normalize.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700&subset=cyrillic" rel="stylesheet">
@@ -109,8 +109,8 @@
                 <div class="text"><h4>&hearts; Yana</h4>
                     <h5>I &hearts; cotton candy</h5>
                     <p class="dolls">Huggable and soft, Yana was inspired by the old-time rag dolls and is very
-                        suitable for young girls, especially for sleeping with at night. With this long hair you can
-                        make all kinds of hairstyles.</p>
+                        suitable for youngsters, especially for cuddling at night.<br>
+                        You can do all kinds of hairstyles with her long hair!</p>
                     <p class="dolls">With or withour eyebrows, with a painted or a stitched nose, smiling or serious -
                         you choose her facial features.</p>
                     <p class="price">$35.00</p>
