--- a/about.html
+++ b/about.html
@@ -208,29 +208,23 @@
             <div class="container">
                 <section class="share-icons container">
                     <a class="share-facebook"
-                       href="http://www.facebook.com/sharer.php?u=http%3A%2F%2Fkindmonster.cf%2Fabout%2F&amp;t=About"
+                       href="http://www.facebook.com/sharer.php?u=https%3A%2F%2Fkindmonster.cf%2Fabout%2Ehtml"
                        title="Facebook" target="_blank">
                         <i class="fa fa-facebook-square" aria-hidden="true"></i>
                     </a>
                     <a class="share-twitter"
-                       href="http://twitter.com/share?text=About&amp;url=http%3A%2F%2Fkindmonster.cf%2Fabout%2F"
+                       href="http://twitter.com/share?text=About&amp;url=https%3A%2F%2Fkindmonster.cf%2Fabout%2Ehtml"
                        title="Twitter"
                        target="_blank">
                         <i class="fa fa-twitter-square" aria-hidden="true"></i>
                     </a>
-                    <a class="share-google"
-                       href="https://plus.google.com/share?url=http%3A%2F%2Fkindmonster.cf%2Fabout%2F"
-                       title="Google+"
-                       target="_blank">
-                        <i class="fa fa-google-plus-square" aria-hidden="true"></i>
-                    </a>
                     <a class="share-linkedin"
-                       href="http://www.linkedin.com/shareArticle?mini=true&amp;url=http%3A%2F%2Fkindmonster.cf%2Fabout%2F&amp;title=About"
+                       href="http://www.linkedin.com/shareArticle?mini=true&amp;url=https%3A%2F%2Fkindmonster.cf%2Fabout%2Ehtml&amp;title=About"
                        title="LinkedIn" target="_blank">
                         <i class="fa fa-linkedin-square" aria-hidden="true"></i>
                     </a>
                     <!--<i class="fa fa-pinterest-square" aria-hidden="true" title="Pinterest"></i>-->
-                    <a class="share-email" href="mailto:?subject=About&amp;body=http%3A%2F%2Fkindmonster.cf%2Fabout%2F"
+                    <a class="share-email" href="mailto:?subject=About&amp;body=https%3A%2F%2Fkindmonster.cf%2Fabout%2Ehtml%2F"
                        title="Email" target="">
                         <i class="fa fa-envelope-square" aria-hidden="true"></i>
                     </a>
