--- a/dolls/ballerina.html
+++ b/dolls/ballerina.html
@@ -125,30 +125,24 @@
             <div class="container">
                 <section class="share-icons container">
                     <a class="share-facebook"
-                       href="http://www.facebook.com/sharer.php?u=http%3A%2F%2Fkindmonster.cf%2Fmalvina%2F&amp;t=Malvina"
+                       href="http://www.facebook.com/sharer.php?u=https%3A%2F%2Fkindmonster.cf%2Fdolls%2Fballerina%2Ehtml"
                        title="Facebook" target="_blank">
                         <i class="fa fa-facebook-square" aria-hidden="true"></i>
                     </a>
                     <a class="share-twitter"
-                       href="http://twitter.com/share?text=Malvina&amp;url=http%3A%2F%2Fkindmonster.cf%2Fmalvina%2F"
+                       href="http://twitter.com/share?text=Ballerina&amp;url=https%3A%2F%2Fkindmonster.cf%2Fdolls%2Fballerina%2Ehtml"
                        title="Twitter"
                        target="_blank">
                         <i class="fa fa-twitter-square" aria-hidden="true"></i>
                     </a>
-                    <a class="share-google"
-                       href="https://plus.google.com/share?url=http%3A%2F%2Fkindmonster.cf%2Fmalvina%2F"
-                       title="Google+"
-                       target="_blank">
-                        <i class="fa fa-google-plus-square" aria-hidden="true"></i>
-                    </a>
                     <a class="share-linkedin"
-                       href="http://www.linkedin.com/shareArticle?mini=true&amp;url=http%3A%2F%2Fkindmonster.cf%2Fmalvina%2F&amp;title=Malvina"
+                       href="http://www.linkedin.com/shareArticle?mini=true&amp;url=https%3A%2F%2Fkindmonster.cf%2Fdolls%2Fballerina%2Ehtml"
                        title="LinkedIn" target="_blank">
                         <i class="fa fa-linkedin-square" aria-hidden="true"></i>
                     </a>
                     <!--<i class="fa fa-pinterest-square" aria-hidden="true" title="Pinterest"></i>-->
                     <a class="share-email"
-                       href="mailto:?subject=Malvina&amp;body=http%3A%2F%2Fkindmonster.cf%2Fmalvina%2F"
+                       href="mailto:?subject=Ballerina&amp;body=https%3A%2F%2Fkindmonster.cf%2Fdolls%2Fballerina%2Ehtml"
                        title="Email" target="">
                         <i class="fa fa-envelope-square" aria-hidden="true"></i>
                     </a>
