--- a/tiny/fox.html
+++ b/tiny/fox.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Ballerina - Kind Monster Cafe</title>
+    <title>Tiny Fox - Kind Monster Cafe</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/4.2.0/normalize.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700&subset=cyrillic" rel="stylesheet">
@@ -123,32 +123,27 @@
         </section>
         <footer>
             <div class="container">
-                <section class="share-icons container">
+            <div class="container">
+                 <section class="share-icons container">
                     <a class="share-facebook"
-                       href="http://www.facebook.com/sharer.php?u=http%3A%2F%2Fkindmonster.cf%2Fmalvina%2F&amp;t=Malvina"
+                       href="http://www.facebook.com/sharer.php?u=https%3A%2F%2Fkindmonster.cf%2Ftiny%2Ffox%2Ehtml"
                        title="Facebook" target="_blank">
                         <i class="fa fa-facebook-square" aria-hidden="true"></i>
                     </a>
                     <a class="share-twitter"
-                       href="http://twitter.com/share?text=Malvina&amp;url=http%3A%2F%2Fkindmonster.cf%2Fmalvina%2F"
+                       href="http://twitter.com/share?text=Tiny%20Fox&amp;url=https%3A%2F%2Fkindmonster.cf%2Ftiny%2Ffox%2Ehtml"
                        title="Twitter"
                        target="_blank">
                         <i class="fa fa-twitter-square" aria-hidden="true"></i>
                     </a>
-                    <a class="share-google"
-                       href="https://plus.google.com/share?url=http%3A%2F%2Fkindmonster.cf%2Fmalvina%2F"
-                       title="Google+"
-                       target="_blank">
-                        <i class="fa fa-google-plus-square" aria-hidden="true"></i>
-                    </a>
                     <a class="share-linkedin"
-                       href="http://www.linkedin.com/shareArticle?mini=true&amp;url=http%3A%2F%2Fkindmonster.cf%2Fmalvina%2F&amp;title=Malvina"
+                       href="http://www.linkedin.com/shareArticle?mini=true&amp;url=https%3A%2F%2Fkindmonster.cf%2Ftiny%2Ffox%2Ehtml&amp;title=Tiny%20Snail"
                        title="LinkedIn" target="_blank">
                         <i class="fa fa-linkedin-square" aria-hidden="true"></i>
                     </a>
                     <!--<i class="fa fa-pinterest-square" aria-hidden="true" title="Pinterest"></i>-->
                     <a class="share-email"
-                       href="mailto:?subject=Malvina&amp;body=http%3A%2F%2Fkindmonster.cf%2Fmalvina%2F"
+                       href="mailto:?subject=Tiny%20Fox&amp;body=https%3A%2F%2Fkindmonster.cf%2Ftiny%2Ffox%2Ehtml"
                        title="Email" target="">
                         <i class="fa fa-envelope-square" aria-hidden="true"></i>
                     </a>
